Fix build without latex2html

--- a/formal.tex
+++ b/formal.tex
@@ -12,11 +12,11 @@ y$ means ``we do not know the relation between $a$ and $y$''.
 With the two operations
 $+$ and $\cdot$ defined as in table \ref{tabOpR} $R$ forms a
 commutative
-\htmladdnormallink{rig\footnote{On the WWW I found the English term
+rig\footnote{On the WWW I found the English term
     ``rig'' for what Germans call a ``Halb\-ring''. This is probably a
     play of words: Compared  to a ``ring'' a ``rig'' misses an ``n''
     as well as inverse elements regarding addition. I cite Ross Moore
-(see {\tt \htmladdnormallink{http://www.mpce.mq.edu.au/\tttilde{}ross/maths/Quantum/Sect1.html\#206}{http://www.mpce.mq.edu.au/~ross/maths/Quantum/Sect1.html#206}}):
+(see {\tt \htmladdnormallink{http://www.mpce.mq.edu.au/\tttilde{}ross/maths/Quantum/Sect1.html\#206}{http://www.mpce.mq.edu.au/~ross/maths/Quantum/Sect1.html}}):
 \begin{quote}
 A {\em rig} is a set $R$ enriched with two monoid structures, a
 commutative one written additively and the other written
@@ -34,7 +34,7 @@ integers  $\Z$ provide an example.
 
 A rig is {\em commutative}  when the multiplicative monoid is commutative.
 \end{quote}
-}}{http://www.mpce.mq.edu.au/~ross/maths/Quantum/Sect1.html#206}
+}
 with $0$-element $\unknown$ and $1$-element $\equal$. The operation $+$ can be
 understood as ``combining {\em parallel} information about a relation'',
 e.g. if we have $a \infixunknown y$ and $a \infixless y$ we have $a
